# coggy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  GUARANTEES.md  README.md  bb.edn  coggy  shell.nix
.github/workflows/: ci.yml  deploy.yml
docs/: api.md  architecture-fit.md  benchmarks.md  coggy-three-layers.md  demo.md  deployment.md  example-trace.md  user-stories.md
resources/ibid/: legal-corpus.edn
scripts/: coggy-client  demo-run.sh  oom-tripwire.sh  run-benchmarks.sh  run-multi-web.sh  run-web.sh
scripts/deploy/: coggyctl.sh  provision_subdomain.sh
scripts/tmux/: coggy_tri.sh  save-sessions.sh
skills/coggy-claude/: SKILL.md
src/: atom.rs  atomspace.rs  cogloop.rs  ecan.rs  lib.rs  main.rs  ontology.rs  parse.rs  pln.rs  tikkun.rs
src/coggy/: assess.clj  atomspace.clj  attention.clj  bench.clj  boot.clj  domain.clj  llm.clj  main.clj  ontology.clj  repl.clj  semantic.clj  tmux-layout.sh  tmux_dash.clj  trace.clj  tui.clj  web.clj
src/coggy/integrations/: ibid.clj
state/tmux/: sessions.sh
static/: index.html  promptsets.json
test/coggy/: atomspace_test.clj  bench_test.clj  domain_test.clj
