[package]
name = "coggy"
version = "0.1.0"
edition = "2021"
description = "Coggy — cognitive architecture with AtomSpace, PLN, and ECAN"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[bin]]
name = "web"
path = "src/bin/web.rs"
